[package]
name = "poc-calamine-wasm"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
calamine = {path = "./calamine"}
# calamine = "0.18.0"
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
js-sys = "*"

[dependencies.web-sys]
version = "0.3"
features = [
    "File",
    "Blob"
]
